funciona el login y la comparticion con facebook

--- a/FacebookTutorial/Base.lproj/Main.storyboard
+++ b/FacebookTutorial/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,11 +17,47 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Veamos si podemos poner una Imagen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tlt-X0-8D1">
+                                <rect key="frame" x="25" y="39" width="401" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="401" id="FIC-mg-sgB"/>
+                                    <constraint firstAttribute="height" constant="30" id="sUM-Y5-aR8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZbU-hs-AQf">
+                                <rect key="frame" x="180" y="88" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="ZGT-dW-Sai"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CoX-Ko-Nvm">
+                                <rect key="frame" x="270" y="260" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ZbU-hs-AQf" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="36Y-hg-llM"/>
+                            <constraint firstItem="ZbU-hs-AQf" firstAttribute="top" secondItem="Tlt-X0-8D1" secondAttribute="bottom" constant="19" id="5Ql-fz-i2t"/>
+                            <constraint firstItem="Tlt-X0-8D1" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="19" id="Dwo-Ho-A1s"/>
+                            <constraint firstItem="CoX-Ko-Nvm" firstAttribute="top" secondItem="ZbU-hs-AQf" secondAttribute="bottom" constant="44" id="QV9-wg-xp7"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="CoX-Ko-Nvm" secondAttribute="bottom" constant="310" id="lxv-vH-Ohl"/>
+                            <constraint firstItem="CoX-Ko-Nvm" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" constant="270" id="mX4-OL-CGL"/>
+                            <constraint firstItem="Tlt-X0-8D1" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="5" id="t4K-FF-hHR"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="ImageView" destination="ZbU-hs-AQf" id="CSF-Jq-1sw"/>
+                        <outlet property="botonLogin" destination="CoX-Ko-Nvm" id="ARl-uG-vYe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="237"/>
         </scene>
     </scenes>
 </document>
